Fix Download button on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,9 +9,12 @@ article
   font-size: 1rem;
   font-weight: 500;
   height: 3rem;
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 10px;
   margin-bottom: 10px;
+  white-space: nowrap;
 }
 
 .pill-btn.grey {
