--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -117,8 +117,8 @@
     display: none;
   }
   .navbar-sidebar .download-btn {
-    display: block;
+    display: inline-flex;
     margin-top: 1rem;
-    width: 5.4rem;
+    margin-left: 0.5rem;
   }
 }
